# subprocess-test

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: integration.rs  integration_2.rs
xtask/: Cargo.toml
xtask/src/: main.rs
