[workspace]
members = [".", "xtask"]

[package]
name = "subprocess-test"
version = "0.1.1"
edition = "2024"
authors = [ "Igor Baidiuk <target.san@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/target-san/subprocess-test"
description = """
Convenience macro for creating tests which run in child process
"""
keywords = [
    "macro",
    "macros",
    "test",
    "testing",
    "utility",
]

[dependencies]
defer = "0.2.1"
tempfile = "3.19.1"
